force-app/main/default/objects/Alert__mdt/Alert__mdt.object-meta.xml
<CustomObject>
    <label>Alert</label>
    <pluralLabel>Alerts</pluralLabel>
</CustomObject>