force-app/main/default/objects/Alert__mdt/fields/Complete_Message__c.field-meta.xml
<CustomField>
    <fullName>Complete_Message__c</fullName>
    <label>Complete Message</label>
    <length>90</length>
    <type>Text</type>
</CustomField>