force-app/main/default/objects/Alert__mdt/fields/Incomplete_Message__c.field-meta.xml
<CustomField>
    <fullName>Incomplete_Message__c</fullName>
    <label>Incomplete Message</label>
    <length>90</length>
    <type>Text</type>
</CustomField>